# stoppy

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: build_and_release.yml
stoppy/: __main__.py  cli.py  legacy.py  modern.py  mybreak.py
